fix footbar spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,7 +77,3 @@
 .popper :hover {
   background-color: #eaeaea;
 }
-
-.avatar-icon :hover {
-  background-color: #bdbdbd !important;
-}
